# VideoHomework

./: README.md
common/: CMakeLists.txt
common/RedVideoFormat/: CMakeLists.txt  H264Reader.cpp  H264Reader.hpp  RedByte.cpp  RedByte.hpp  RedVideoFormat.hpp
common/RedVideoFormatMain/: CMakeLists.txt  Main.cpp
